Took three lines of CSS from the pocket to the pocketbook to try and fix mobile alignment issue

--- a/client/src/components/Pocket/style.css
+++ b/client/src/components/Pocket/style.css
@@ -8,9 +8,6 @@
     text-align:center;
     overflow:hidden;
 
-    display:inline-block;
-    margin:5px;
-    position:relative;
 }
 
 .pocket h1{
