--- a/client/src/components/Pocketbook/style.css
+++ b/client/src/components/Pocketbook/style.css
@@ -7,3 +7,10 @@
     height:150px;
     position:relative;
 }
+
+#dashboard > * {
+    display:inline-block;
+    margin:5px;
+    position:relative;
+}
+
